# olmoearth_pretrain

./: .dockerignore  .gitignore  .pre-commit-config.yaml  20260710_summary.md  =1.32.0  Dockerfile  HANDOFF_NOTES_EMA_DIAGNOSTICS.md  PERCEIVER_README.md  README.md  beaker_config_example.yaml  eval_pink.txt  flexi_vit.py  pyproject.toml  requirements-beaker.txt  requirements-dev.txt  requirements-eval.txt  requirements.txt  test_install.py  train_reflectance_reconstruction.py
.claude/: settings.local.json
.cursor/: worktrees.json
.github/: experiment-report-users.json
WIS_DSP_lib/: constants.py  dataloader.py  olmo_helper.py
ablation_filters/: NEXT_STEPS.md
data/: corpus_30.csv  eurocrops_hcat3_mapping.json  open_set_segmentation_datasets.json
docs/: Adding-Eval-Datasets.md  Checkpoint-Eval-Curves-GPU-Tests.md  Dataset-Creation.md  Evaluation.md  Experiment-Development-Guide.md  Inference-Quickstart.md  PrecomputedEmbeddingEvals.md  Pretraining-Dataset.md  Pretraining.md  Quantization.md  Reference.md  Setup-Internal.md  perceiver_encoder_spec.md  workshop-eurosat-knn.md
helios/: __init__.py  constants.py  data_contract.py  latent_predictor.py  olmo_core_proto.py
minimal/: PLAN.md  README.md  example_initialize_model.py  pyproject.toml
minimal/olmoearth_pretrain/: __init__.py  config.py  datatypes.py  model_loader.py  types.py
minimal/olmoearth_pretrain/data/: __init__.py
minimal/olmoearth_pretrain/nn/: __init__.py  encodings.py
notes/: 2026-05-11.md
olmo_earth/: __init__.py
olmoearth_pretrain.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  (+1 more)
(+2694 files in other folders)
